# BuildItBreakItFixItForSparta

./: .gitignore  Makefile  README.md  fix_suggestion.txt  hi  logappend  logappend.py  logread  status_report.txt
all_breaks/CyberPoint/: 46-corr-1.txt  46-corr-1.xml  47-corr-1.xml  47-integ-1.xml  47-integ-2.xml  51-corr-1.txt  51-corr-1.xml  57-corr-1.xml  57-corr-2.txt  57-corr-2.xml  57-corr-3.txt  57-corr-3.xml  57-integ-1.xml  57-integ-2.xml  67-conf-1.xml  67-corr-1.txt  67-corr-1.xml  67-integ-1.xml  68-corr-1.txt  68-corr-1.xml  68-corr-2.txt  68-corr-2.xml  68-corr-3.txt  68-corr-3.xml  69-conf-1.xml  69-conf-10.xml  69-conf-11.xml  69-conf-12.xml  69-conf-13.xml  69-conf-14.xml  69-conf-15.xml  69-conf-16.xml  69-conf-17.xml  69-conf-18.xml  69-conf-19.xml  69-conf-2.xml  69-conf-20.xml  69-conf-21.xml  69-conf-22.xml  69-conf-23.xml  (+38 more)
all_breaks/ForTheWin/: break1.txt  break1.xml
all_breaks/SSRG_VT/: 19_a_emptyset.xml  19_a_test1.txt  19_a_test1.xml  19_a_wrongbounds.txt  19_a_wrongbounds.xml  19_b_test1.txt  19_b_test1.xml  19_long_room.xml  19_repeat_ts.xml  19_shtml1.txt  19_shtml1.xml  19_shtml2.txt  19_shtml2.xml  19_shtml3.txt  19_shtml3.xml  19_zero_ts.txt  19_zero_ts.xml  21_a_lu.txt  21_a_lu.xml  21_dup_person.txt  21_dup_person.xml  21_many_logs.xml  21_no_args.txt  21_no_args.xml  21_repeat_ts.xml  21_rhtml1.txt  21_rhtml1.xml  21_rpt_flag.txt  21_rpt_flag.xml  21_rpt_person.txt  21_rpt_person.xml  21_shtml3.txt  21_shtml3.xml  21_wrong_key1.xml  35_a_emptyset.xml  35_a_lu.xml  35_a_wrongbounds.xml  35_invalid_path.txt  35_invalid_path.xml  35_long_room.xml  (+119 more)
all_breaks/gs1/: README.md  batch.bug3  team21_bug1.txt  team21_bug1.xml  team21_bug2.txt  team21_bug2.xml  team21_bug3.txt  team21_bug3.xml  team21_bug4.xml  team35_bug1.txt  team35_bug1.xml  team35_bug2.txt  team35_bug2.xml  team46_bug1.txt  team46_bug1.xml  team46_bug2.txt  team46_bug2.xml  team46_bug3.xml  team47_bug1.txt  team47_bug1.xml  team47_bug2.txt  team47_bug2.xml  team47_bug3.txt  team47_bug3.xml  team47_bug4.txt  team47_bug4_decode.py  team51_bug1.xml  team51_bug2.xml  team51_bug3.batch  (+54 more)
break/: 46DoesNotAllowEmployeesToReenter.txt  46integrityviolation.txt  57roomentered.txt  57roomentered.xml  57securityerror.txt  57securityerror.xml  68integrityviolation.txt
fix/: prevent_repeat_flags.xml  python_argument_handler_fix.xml  split_on_empty_string.xml
other_teams/19/code/: LICENSE  Makefile  README.md  Setup.hs  available-packages.txt  error309-bibifi.cabal
other_teams/19/code/meeting-notes/: 2014-08-28.txt
other_teams/19/code/src/: App.hs  CryptoUtil.hs  FileHelpers.hs  FixedSizeSerializable.hs  FixedSizeString.hs  HighLevel.hs  HighLevelTypes.hs  Lens.hs  LowLevel.hs  MRand.hs  MidLevel.hs  SafeNat.hs  Types.hs  UIInput.hs  UIOutput.hs  Util.hs
other_teams/19/code/src-logappend/: Main.hs
other_teams/19/code/src-logread/: Main.hs
other_teams/19/code/src-test/: Main.hs
spec/: IDS_HTML.md  LOGAPPEND.md  LOGREAD.md  SPEC.md
testing/: LAPDEBRA  README  check_test.py  out.xml
(+344 files in other folders)
